--- a/ฺBasic_Programming_Concepts.ipynb
+++ b/ฺBasic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ฺBasic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMFcQ8p6NNozHCkjvuuKx0W",
+      "authorship_tag": "ABX9TyPax3ljno9Q8jm1FaHYgxiW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1030,12 +1030,12 @@
       ],
       "metadata": {
         "id": "PCWHwX9Sfoy4",
-        "outputId": "1efedf5f-f7ce-467c-fd28-f8ad375907da",
+        "outputId": "530fe12c-255a-4136-b047-db6045355f1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 98,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,61 +1050,61 @@
       "cell_type": "code",
       "source": [
         "for n in input:\n",
-        "    if n=='ก':\n",
-        "        print(f'{n} คะแนน ไม่สามารถตัดเกรดได้')\n",
+        "    if type(n)==type('n'):\n",
+        "        print(f'คะแนนที่ได้คือ {n} คะแนน ไม่สามารถตัดเกรดได้')\n",
         "    else:\n",
         "        if (n>=101):\n",
-        "            print(f'{n} คะแนน ไม่สามารถตัดเกรดได้')\n",
-        "        elif (n>=80):\n",
-        "            print(f'{n} คะแนน ได้เกรด A')\n",
-        "        elif (n>=75):\n",
-        "            print(f'{n} คะแนน ได้เกรด B+')\n",
-        "        elif (n>=70):\n",
-        "            print(f'{n} คะแนน ได้เกรด B')\n",
-        "        elif (n>=65):\n",
-        "            print(f'{n} คะแนน ได้เกรด C+')\n",
-        "        elif (n>=60):\n",
-        "            print(f'{n} คะแนน ได้เกรด C')\n",
-        "        elif (n>=55):\n",
-        "            print(f'{n} คะแนน ได้เกรด D+')\n",
-        "        elif (n>=50):\n",
-        "            print(f'{n} คะแนน ได้เกรด D')\n",
-        "        elif (n>=0):\n",
-        "            print(f'{n} คะแนน ได้เกรด F')\n",
+        "            print(f'คะแนนที่ได้คือ {n} คะแนน ไม่สามารถตัดเกรดได้')\n",
+        "        elif (80<=n<=100):\n",
+        "            print(f'คะแนนที่ได้คือ {n} คะแนน ได้เกรด A')\n",
+        "        elif (75<=n<80):\n",
+        "            print(f'คะแนนที่ได้คือ {n} คะแนน ได้เกรด B+')\n",
+        "        elif (70<=n<75):\n",
+        "            print(f'คะแนนที่ได้คือ {n} คะแนน ได้เกรด B')\n",
+        "        elif (65<=n<70):\n",
+        "            print(f'คะแนนที่ได้คือ {n} คะแนน ได้เกรด C+')\n",
+        "        elif (60<=n<65):\n",
+        "            print(f'คะแนนที่ได้คือ {n} คะแนน ได้เกรด C')\n",
+        "        elif (55<=n<60):\n",
+        "            print(f'คะแนนที่ได้คือ {n} คะแนน ได้เกรด D+')\n",
+        "        elif (50<=n<55):\n",
+        "            print(f'คะแนนที่ได้คือ {n} คะแนน ได้เกรด D')\n",
+        "        elif (0<=n<50):\n",
+        "            print(f'คะแนนที่ได้คือ {n} คะแนน ได้เกรด F')\n",
         "        else:\n",
-        "            print(f'{n} คะแนน ไม่สามารถตัดเกรดได้')\n",
+        "            print(f'คะแนนที่ได้คือ {n} คะแนน ไม่สามารถตัดเกรดได้')\n",
         "    print ('-----------------------------------------------------')"
       ],
       "metadata": {
         "id": "vSu-adKlgQkC",
-        "outputId": "fd2b240b-9628-4659-8394-e4ccef59281f",
+        "outputId": "5e7de66a-a01e-4910-d3d7-553cdca41c0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 124,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 คะแนน ได้เกรด F\n",
+            "คะแนนที่ได้คือ 1 คะแนน ได้เกรด F\n",
             "-----------------------------------------------------\n",
-            "50 คะแนน ได้เกรด D\n",
+            "คะแนนที่ได้คือ 50 คะแนน ได้เกรด D\n",
             "-----------------------------------------------------\n",
-            "65 คะแนน ได้เกรด C+\n",
+            "คะแนนที่ได้คือ 65 คะแนน ได้เกรด C+\n",
             "-----------------------------------------------------\n",
-            "90 คะแนน ได้เกรด A\n",
+            "คะแนนที่ได้คือ 90 คะแนน ได้เกรด A\n",
             "-----------------------------------------------------\n",
-            "101 คะแนน ไม่สามารถตัดเกรดได้\n",
+            "คะแนนที่ได้คือ 101 คะแนน ไม่สามารถตัดเกรดได้\n",
             "-----------------------------------------------------\n",
-            "-5 คะแนน ไม่สามารถตัดเกรดได้\n",
+            "คะแนนที่ได้คือ -5 คะแนน ไม่สามารถตัดเกรดได้\n",
             "-----------------------------------------------------\n",
-            "49 คะแนน ได้เกรด F\n",
+            "คะแนนที่ได้คือ 49 คะแนน ได้เกรด F\n",
             "-----------------------------------------------------\n",
-            "ก คะแนน ไม่สามารถตัดเกรดได้\n",
+            "คะแนนที่ได้คือ ก คะแนน ไม่สามารถตัดเกรดได้\n",
             "-----------------------------------------------------\n",
-            "80 คะแนน ได้เกรด A\n",
+            "คะแนนที่ได้คือ 80 คะแนน ได้เกรด A\n",
             "-----------------------------------------------------\n"
           ]
         }
