Quiz กลุ่ม 1 ครั้งที่ 1

--- a/Pandas101.ipynb
+++ b/Pandas101.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "import pandas as pd #ใช้ pd แทน pandas"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "iSTcSg7eOa4r"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
       "source": [
         "path = '/content/drive/My Drive/dataviz_2021_data'"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
         "covid_file_path = os.path.join(path,'pm-20-jan-2021.csv') \n",
         "print(covid_file_path)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +136,7 @@
         "a = path + '/pm-18-jan-2021.csv' \n",
         "print(a)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +170,7 @@
         "data_covid = pd.read_csv(covid_file_path)\n",
         "data_covid"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,7 +469,7 @@
       "source": [
         "data_covid.head()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +692,7 @@
           "height": 1000
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1116,7 +1116,7 @@
           "height": 461
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1329,7 +1329,7 @@
       "source": [
         "data_covid.shape # บอก 12653 low และ 10 colum"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1373,7 +1373,7 @@
       "source": [
         "data_covid['province_of_onset']"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1411,7 +1411,7 @@
       "source": [
         "data_covid['risk'][12649] #ชื่อ colum ตามด้วยลำดับ low"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1450,7 +1450,7 @@
       "source": [
         "data_covid.iloc[4,7] #ใส่ iloc เพื่อให้มองแบบ aray "
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1508,7 +1508,7 @@
         "smaller_table = data_covid[['announce_date','province_of_onset','risk']]\n",
         "smaller_table"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1741,7 +1741,7 @@
       "source": [
         "data_covid.iloc[1:5,:]"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1958,7 +1958,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1996,7 +1996,7 @@
       "source": [
         "data_covid[data_covid['province_of_onset']=='ขอนแก่น']"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2336,7 +2336,7 @@
           "height": 991
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2650,7 +2650,7 @@
         "eight_rows_covid = data_covid.iloc[:8,3:] # ตารางตัวอย่าง\n",
         "eight_rows_covid"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2879,7 +2879,7 @@
       "source": [
         "eight_rows_covid[[True,False,True,True,False,True,False,False]]   #2.   ใส่ list ที่มีค่า logic ของแต่ละ low "
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3063,7 +3063,7 @@
       "source": [
         "eight_rows_covid['province_of_onset'] == 'กรุงเทพมหานคร'  #สร้าง list ของ logical expression"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3098,7 +3098,7 @@
       "source": [
         "eight_rows_covid[eight_rows_covid['province_of_onset'] == 'กรุงเทพมหานคร']  #เราเอา 2 บรรทัดบนมาบวกกัน"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3300,7 +3300,7 @@
       "metadata": {
         "id": "vNd8LqIKckJr"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3324,7 +3324,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3367,7 +3367,7 @@
       "source": [
         "this_data = data_covid[['sex','age','province_of_onset']]"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3383,7 +3383,7 @@
       "source": [
         "this_data"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3598,7 +3598,7 @@
         "female = this_data[this_data['sex']=='หญิง']\n",
         "female['age']"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3643,7 +3643,7 @@
         "\n",
         "print(f'อายุเฉลี่ย ของ ผู้ป่วยหญิง {sum/N}')"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3676,7 +3676,7 @@
         "\n",
         "print(f'อายุเฉลี่ย ของ ผู้ป่วยหญิง ในจังหวัดขอนแก่น {sum/N}')"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3703,7 +3703,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#ข้อ 1 คำนวณ อายุเฉลี่ย ของผู้ชาย ในข้อมูลทั้งหมด"
+        "######Quiz"
+      ],
+      "metadata": {
+        "id": "5-NxjpbmIcq0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ข้อ 1 คำนวณ อายุเฉลี่ย ของผู้ชาย ในข้อมูลทั้งหมด"
       ],
       "metadata": {
         "id": "mRE22rf2meBt"
@@ -3717,7 +3726,7 @@
       "metadata": {
         "id": "wzSiqXp4eHKp"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3733,7 +3742,7 @@
         "male = this_data[this_data['sex']=='ชาย']\n",
         "male['age']"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3778,7 +3787,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3792,7 +3801,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#ข้อ 2 คำนวณ อายุเฉลี่ย ของผู้ชาย ในจังหวัดขอนแก่น"
+        "ข้อ 2 คำนวณ อายุเฉลี่ย ของผู้ชาย ในจังหวัดขอนแก่น"
       ],
       "metadata": {
         "id": "DAe0WlTqmhZx"
@@ -3806,7 +3815,7 @@
       "metadata": {
         "id": "gwY6zoEWnk53"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3822,7 +3831,7 @@
           "height": 424
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4037,7 +4046,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4084,7 +4093,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4098,7 +4107,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#ข้อ 3 หาจำนวนผู้ป่วยที่เป็นคน ที่ไม่ใช่คนไทย"
+        "ข้อ 3 หาจำนวนผู้ป่วยที่เป็นคน ที่ไม่ใช่คนไทย"
       ],
       "metadata": {
         "id": "CjYnedbspFs2"
@@ -4112,7 +4121,7 @@
       "metadata": {
         "id": "S41SAPi9s6zM"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4129,7 +4138,7 @@
           "height": 424
         }
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4320,7 +4329,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
