add group quiz answer

--- a/Pandas101.ipynb
+++ b/Pandas101.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "import pandas as pd #ใช้ pd แทน pandas"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7268,7 +7268,7 @@
         "\n",
         "data_covid[TF].head()"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7486,7 +7486,7 @@
       "metadata": {
         "id": "Bczfr76ZTVu9"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7502,7 +7502,7 @@
           "height": 424
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7683,14 +7683,14 @@
     {
       "cell_type": "code",
       "source": [
-        "TF=list() # กำ TF=listว่าง\n",
-        "for each_row in this_data.iterrows(): #\n",
-        "    if each_row[1]['announce_date'].split('/')[1] <= '20': #\n",
-        "        TF.append(True) #\n",
+        "TF=list() # กำหนด TF= list ว่าง\n",
+        "for each_row in this_data.iterrows(): #สร้าง list เพื่อวนลูปของแต่ละแถว \n",
+        "    if each_row[1]['announce_date'].split('/')[1] <= '20': #ในแต่ละ 1 แถว ใช้ split เพื่อแบ่งสตริงข้อความออกเป็นส่วนๆ โดยใช้ตัวคั่นคือ /\n",
+        "        TF.append(True)\n",
         "    else:\n",
-        "        TF.append(False) #\n",
+        "        TF.append(False) \n",
         "\n",
-        "this_data[TF] #"
+        "this_data[TF]"
       ],
       "metadata": {
         "id": "GeCbEjMYYZ-U",
@@ -7700,7 +7700,7 @@
           "height": 424
         }
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
