Display table data and basic matplotlib

--- a/DataViz01_Table_Data.ipynb
+++ b/DataViz01_Table_Data.ipynb
@@ -6,7 +6,7 @@
       "name": "DataViz01 Table Data.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPV0HWSBOBp3QsexL7tobq2",
+      "authorship_tag": "ABX9TyOzk19vYw6jT3zNNxkLvGi3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2951,7 +2951,7 @@
     {
       "cell_type": "code",
       "source": [
-        "n1= three_risk.replace('ชาย',0)\n",
+        "n1= three_risk.replace('ชาย',0) #แทนชาย = 0\n",
         "n1"
       ],
       "metadata": {
@@ -3167,7 +3167,7 @@
     {
       "cell_type": "code",
       "source": [
-        "n2= n1.replace('หญิง',100)\n",
+        "n2= n1.replace('หญิง',100) # แทนหญิง = 0\n",
         "n2"
       ],
       "metadata": {
@@ -3383,7 +3383,7 @@
     {
       "cell_type": "code",
       "source": [
-        "compare_risk = n1.replace('หญิง',100)\n",
+        "compare_risk = n1.replace('หญิง',100) # เปลี่ยนชื่อตัวแปรเป็น compare_risk เพื่อความเรียบร้อย\n",
         "compare_risk"
       ],
       "metadata": {
