--- a/Dashboard_project.ipynb
+++ b/Dashboard_project.ipynb
@@ -6,7 +6,7 @@
       "name": "Dashboard project.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/suwitchaya17/data_viz_2022/blob/main/Dashboard_project.ipynb",
-      "authorship_tag": "ABX9TyMOjytE+jgniOoTV53SDXVI",
+      "authorship_tag": "ABX9TyMj8z5fTBYD+SO1vzCC5N9t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7729,12 +7729,12 @@
         "NEW"
       ],
       "metadata": {
-        "id": "4zYBygpV2ZwQ",
-        "outputId": "2b6df173-4422-417b-a04b-5bf7cf704ec5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "4zYBygpV2ZwQ",
+        "outputId": "2b6df173-4422-417b-a04b-5bf7cf704ec5"
       },
       "execution_count": 114,
       "outputs": [
@@ -8146,12 +8146,12 @@
     {
       "cell_type": "code",
       "source": [
-        "databoard_new.to_csv('project_clean_new.csv', encoding='utf-8')"
+        "NEW.to_csv('NEW.csv', encoding='utf-8')"
       ],
       "metadata": {
         "id": "54L6072MdDea"
       },
-      "execution_count": 116,
+      "execution_count": 117,
       "outputs": []
     }
   ]
