Dashboard_After_Present

--- a/Dashboard_After_Present.ipynb
+++ b/Dashboard_After_Present.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Dashboard_After_Present.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOOOYQOtoEaVDLc2Ux53TWi",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPbZg7RhkySpO5obB7C4ZWG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9508,6 +9509,16 @@
       },
       "execution_count": 85,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ลิงค์ Dashboard\n",
+        "https://datastudio.google.com/reporting/ea6e46c9-1e34-4d70-98eb-91021087a551"
+      ],
+      "metadata": {
+        "id": "Mq6U2xU11N3O"
+      }
     }
   ]
 }
