--- a/Final_Dashboard.ipynb
+++ b/Final_Dashboard.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Final_Dashboard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMCxSgtPdwFMDMlxvFijU6L",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOT/Gl5xqkTsdJa9oKfPqd4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +46,7 @@
       "metadata": {
         "id": "MOE0Hz2XiZlP"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +63,7 @@
         "id": "5QhZgitVicfc",
         "outputId": "534271fd-d822-4a3c-e91c-1a178aeddbac"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +96,7 @@
         "id": "MR-w4gFaQ3Cp",
         "outputId": "aa5e0e77-b8ee-48e1-d2bc-d7a18068c81d"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +121,7 @@
         "id": "MzdwolmOSB4B",
         "outputId": "16bac273-aa5c-4e1c-9395-52e0cc9a0394"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,7 +541,7 @@
         "id": "ROcfzFzMi8Hh",
         "outputId": "4ffa6438-5a60-4e78-b32a-01fb62cd2031"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -837,7 +838,7 @@
         "id": "BstfbXF2kAVx",
         "outputId": "1f6b2f1b-2cf2-43cc-f622-935ea50f3f4b"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,7 +884,7 @@
         "id": "Xw4sL5FCpRsC",
         "outputId": "34cd6fa8-e323-4cba-a46c-e0cd0dc4054e"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1180,7 +1181,7 @@
         "id": "6HkB_UiCmk8u",
         "outputId": "a1a67d7b-95b4-434a-f496-d528c3244820"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1223,7 +1224,7 @@
         "id": "pRI55AchT_Ik",
         "outputId": "5abd8c42-65ed-46fc-a02a-8a100f047725"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1248,7 +1249,7 @@
         "id": "41oMCsmITsVx",
         "outputId": "a1b625f0-5f89-47cd-c490-9a94b8bd5057"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1644,7 +1645,7 @@
         "id": "pTzTu6MorC4l",
         "outputId": "f500ffd7-c6a0-4a4e-a6b3-68f6de1d55fd"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1989,7 +1990,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2026,7 +2027,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2068,7 +2069,7 @@
       "metadata": {
         "id": "JP_FNioMviB4"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2095,7 +2096,7 @@
         },
         "outputId": "e847ecc7-f7ff-4016-baba-ba22edd61b8b"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2437,13 +2438,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "QbpMR4jzsxjb",
         "outputId": "07c74fa9-0e2b-48e1-c942-d48f2efbefb1"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2797,13 +2797,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "1_28GvNhs4iZ",
         "outputId": "428496f6-6408-4c16-bd8a-0cb16ea99bb1"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3147,13 +3146,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "g7S0YS5WtqCi",
         "outputId": "f3c0aeba-c734-4273-ed79-d73dc0fa49fd"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3507,13 +3505,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "HzujJfu4t0PH",
         "outputId": "431bde49-5e46-4136-a9f4-c964e648e4e8"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3867,13 +3864,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "77c7wJQZt7aj",
         "outputId": "7dd81b2f-3df4-4624-9fe4-c68ab0466ea7"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4215,13 +4211,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Pa6v0Gh_uMI9",
         "outputId": "d4146943-4d21-442f-af03-8381b6c740f4"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4575,13 +4570,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "7olF0C9JuXLN",
         "outputId": "1326c800-a452-499b-a2b0-13a993b98df1"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4939,7 +4933,7 @@
         "id": "ZQSkONOHu3SU",
         "outputId": "7028d55c-6c90-4c00-b0dc-869713ca99bd"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4967,7 +4961,7 @@
         },
         "outputId": "4db6be54-f366-4db9-9647-0b88c9cfdbec"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4995,7 +4989,7 @@
         "id": "cZqsTIGUv1qV",
         "outputId": "7be01118-7e45-49c0-b3a6-9e5d982bafec"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5027,13 +5021,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IuD6MNMkvw9T",
         "outputId": "ad9b7c94-d687-4d3a-cd4b-ae9f540cbb8c"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5387,7 +5380,7 @@
         },
         "outputId": "fe2eef88-e3d8-4a3f-d750-ae769a28bc36"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5464,7 +5457,7 @@
         },
         "outputId": "74af5909-7448-4e35-acd4-4999cd40f7e8"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5846,7 +5839,7 @@
       "metadata": {
         "id": "SZxDdUNf0krt"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5861,7 +5854,7 @@
         },
         "outputId": "d7d0104f-075e-4eb1-f2d3-76458fc963b3"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5889,7 +5882,7 @@
         },
         "outputId": "a115045b-6539-46d4-e548-c4775b113c07"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6230,7 +6223,7 @@
       "metadata": {
         "id": "cJ935YXcy45Y"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6246,7 +6239,7 @@
         },
         "outputId": "74cbdc6d-7204-4d22-d277-03457368ff27"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6272,7 +6265,7 @@
         },
         "outputId": "f9d656e2-a80f-4ee6-f2d0-675a1dd9bf22"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6309,7 +6302,7 @@
         },
         "outputId": "df5d0b71-a636-4c4e-d85e-10d280425e57"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6459,7 +6452,7 @@
       "metadata": {
         "id": "SRbA6HzLJ47n"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6475,7 +6468,7 @@
           "height": 780
         }
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6811,7 +6804,7 @@
         },
         "outputId": "0f11c17b-ca33-4468-ea26-6bf0582c44cd"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6848,7 +6841,7 @@
         },
         "outputId": "602ef473-7bee-40e8-965f-1be40e963e4a"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6886,7 +6879,7 @@
         },
         "outputId": "f38ec6e3-1269-40c8-d2f3-980f6f5608c0"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7233,7 +7226,7 @@
         },
         "outputId": "6c568e2b-fb7e-4a37-b731-e8b9bafacf2f"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7701,7 +7694,7 @@
         },
         "outputId": "a4cb76f2-36a4-4b2d-8fbd-b45bb37105f9"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7754,7 +7747,7 @@
         },
         "outputId": "aa143409-0414-43ce-bf73-b6638d9a417b"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7811,7 +7804,7 @@
         },
         "outputId": "705a8493-f90c-4ea4-db2e-8c1198b2e68f"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8279,7 +8272,7 @@
         },
         "outputId": "9ef3764c-a9dc-4442-d52b-d076b14763c1"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8323,7 +8316,7 @@
         },
         "outputId": "ff429897-6b7e-43e2-c350-189d5641331a"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8377,7 +8370,7 @@
         },
         "outputId": "571b8ef8-6f94-4ef4-b916-7cf3d7bd8e0c"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8841,14 +8834,14 @@
       "metadata": {
         "id": "FLmusU-s5ER9"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "# ลิงค์ Dashboard\n",
-        "https://datastudio.google.com/reporting/45b1b540-79ca-4b15-b6c5-f1a3a2308f8e"
+        "https://datastudio.google.com/reporting/b1d08415-72b7-40f4-92a7-e728a7fd1f93"
       ],
       "metadata": {
         "id": "lJyVYIC05F11"
